base generated by ai

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/styles.css" />
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Static Word Sets Vowel Counter</title>
+</head>
+<body>
+  <h2>Static Sets of Words</h2>
+  <button onclick="checkSet(0)">Check Set 1</button>
+  <button onclick="checkSet(1)">Check Set 2</button>
+  <button onclick="checkSet(2)">Check Set 3</button>
 
-  <body></body>
+  <p id="words"></p>
+  <p id="result"></p>
+
+  <!-- Link to external JavaScript file -->
+  <script src="picker.js"></script>
+</body>
 </html>
