--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Static Word Sets Vowel Counter</title>
-</head>
-<body>
-  <h2>Static Sets of Words</h2>
-  <button onclick="checkSet(0)">Check Set 1</button>
-  <button onclick="checkSet(1)">Check Set 2</button>
-  <button onclick="checkSet(2)">Check Set 3</button>
+  <head>
+    <meta
+      charset="UTF-8"
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
+    <title>Static Word Sets Vowel Counter</title>
+  </head>
+  <body>
+    <h2>Static Sets of Words</h2>
+    <button onclick="checkSet()">Check Set</button>
 
-  <p id="words"></p>
-  <p id="result"></p>
+    <p id="words"></p>
+    <p id="result"></p>
 
-  <!-- Link to external JavaScript file -->
-  <script src="picker.js"></script>
-</body>
+    <!-- Link to external JavaScript file -->
+    <script src="picker.js"></script>
+  </body>
 </html>
