changing names so it is actually related and not random

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
-    <title>Static Word Sets Vowel Counter</title>
+    <title>Etali ____ Goblin mana generator</title>
   </head>
   <body>
-    <h2>Static Sets of Words</h2>
-    <button onclick="checkSet()">Check Set</button>
+    <h2>Etali ____ Goblin mana generator</h2>
+    <button onclick="checkSet()">Generate name</button>
 
     <p id="words"></p>
     <p id="result"></p>
